--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^2.0.0",
     "hexo-helper-live2d": "^3.1.1",
+    "hexo-neat": "^1.0.9",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-markdown-it": "^7.1.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-cloud": "^2.1.2",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
-    "live2d-widget-model-nipsilon": "^1.0.5"
+    "live2d-widget-model-nipsilon": "^1.0.5",
+    "markdown-it-emoji": "^2.0.2",
+    "twemoji": "^14.0.2"
   }
 }
