添加隐藏左边栏目按钮

--- a/_config.yml
+++ b/_config.yml
@@ -227,3 +227,12 @@ neat_js:
     - "**/*.min.js"
     - "**/jquery.fancybox.pack.js"
     - "**/index.js"
+
+# RSS订阅
+# Extensions
+plugins: hexo-generator-feed
+#Feed Atom
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
