--- a/_config.yml
+++ b/_config.yml
@@ -161,7 +161,8 @@ live2d:
   tagMode: false
   debug: false
   model:
-    use: live2d-widget-model-nipsilon
+    #use: live2d-widget-model-nipsilon
+    use: live2d-widget-model-wanko
     scale: 1
     hHeadPos: 0.5
     vHeadPos: 0.618
