--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-nipsilon": "^1.0.5",
+    "live2d-widget-model-wanko": "^1.0.5",
     "markdown-it-emoji": "^2.0.2",
     "twemoji": "^14.0.2"
   }
