--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-helper-live2d": "^3.1.1",
     "hexo-neat": "^1.0.9",
