--- a/_config.yml
+++ b/_config.yml
@@ -187,6 +187,8 @@ markdown:
     linkify: true
     typographer: true
     quotes: "“”‘’"
+    # explicitFigures: true
+
   plugins:
     - markdown-it-abbr
     - markdown-it-footnote
@@ -200,7 +202,7 @@ markdown:
     # A suffix that is prepended to the number given if the ID is repeated.
     collisionSuffix: "v"
     # If `true`, creates an anchor tag with a permalink besides the heading.
-    permalink: true
+    permalink: false
     # Class used for the permalink anchor tag.
     permalinkClass: header-anchor
     # The symbol used to make the permalink
