--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -206,4 +206,4 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: MarkChen<br>道法自然<br/>
+aboutme: MarkChen<br/>道法自然<br/>
