--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "hexo-helper-live2d": "^3.1.1",
     "hexo-neat": "^1.0.9",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-markdown-it": "^7.1.0",
+    "hexo-renderer-markdown-it": "latest",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-nipsilon": "^1.0.5",
     "live2d-widget-model-wanko": "^1.0.5",
+    "markdown-it": "latest",
     "markdown-it-emoji": "^2.0.2",
+    "markdown-it-table-of-contents": "^0.6.0",
     "twemoji": "^14.0.2"
   }
 }
