--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -47,17 +47,17 @@ weixin: /assets/img/weixinpay.jpg
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
-toc: 1
+toc: 2
 # 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
 toc_hide_index: true
 # 目录为空时的提示
-toc_empty_wording: "目录，不存在的…"
+toc_empty_wording: "不存在目录"
 
 # 是否有快速回到顶部的按钮
 top: true
 
 # 是否在新窗口打开链接
-open_in_new: true
+open_in_new: false
 
 # Miscellaneous
 baidu_analytics: "f3119e6a4320fc4766f0d145d156f38a"
@@ -206,4 +206,5 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: MarkChen<br/>道法自然<br/>
+#使用,或，来分割
+aboutme: "MarkChen,道法自然"
